--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "doctrine/dbal": " ~2.3",
         "erusev/parsedown": "^1.7",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "6.3.0",
+        "guzzlehttp/psr7": "1.4.2",
         "jacobcyl/ali-oss-storage": "^2.1",
         "laravel/framework": "5.8.*",
         "laravel/socialite": "^3.2",
@@ -25,6 +27,8 @@
         "mews/captcha": "^2.2",
         "mews/purifier": "^2.0",
         "mobiledetect/mobiledetectlib": "^2.8",
+        "monolog/monolog": "1.23.0",
+        "obs/esdk-obs-php": "^3.19",
         "overtrue/easy-sms": "^1.1",
         "overtrue/pinyin": "~3.0",
         "overtrue/wechat": "~4.0",
