--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ version: '3.1'
 services:
   php:
     container_name: "meedu-php"
-#    build:
-#      context: ./docker
-    image: registry.cn-hangzhou.aliyuncs.com/xiaoteng/meedu-php:v1
+    build:
+      context: ./docker
+    # image: registry.cn-hangzhou.aliyuncs.com/xiaoteng/meedu-php:v1
     volumes:
       - ./:/var/www/html/
     restart: always
